[PDI-20979] [PPP-5970] - switch from mstor to (non-vulnerable) mime4j
Removes a dependency on commons-lang 2, restores MBOX functionality.